W3F Grant - 2nd Milestone Delivery

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_CHAIN_ENVIRONMENT=<CHAIN_ENVIRONMENT>
+NEXT_PUBLIC_CONTRACT_ADDRESS=<CONTRACT_ADDRESS>
+NEXT_PUBLIC_PSP22_TOKEN_NAME=<PSP22_TOKEN_NAME>
+NEXT_PUBLIC_PSP22_TOKEN_ADDRESS=<PSP22_TOKEN_ADDRESS>
+NEXT_PUBLIC_PSP22_TOKEN_DECIMALS=<PSP22_TOKEN_DECIMALS>
+```
