--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@oak-network/api-augment": "^2.0.7",
-    "@oak-network/types": "^2.0.7",
+    "@oak-network/api-augment": "^2.1.2",
+    "@oak-network/types": "^2.1.1",
     "@polkadot/api-augment": "^10.11.1",
+    "@polkadot/api-contract": "^10.11.1",
     "@polkadot/keyring": "^12.5.1",
     "@polkadot/types": "^10.11.1",
     "@polkadot/util-crypto": "^12.5.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
